--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,11 @@ android {
         }
     }
 }
-
+repositories {
+    maven{
+        url 'https://raw.github.com/zeeshanejaz/unirest-android/mvn-repo'
+    }
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -25,4 +29,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    //BELOW HAVE BEEN ADDED
+    compile 'com.mashape.unirest:unirest-java:1.4.9'
+    compile 'org.apache.httpcomponents:httpasyncclient:4.0.2'
+    // compile 'org.json:json:20140107'
+    //compile 'com.mashape.unirest:unirest-android:1.0+'
 }
