Added Json depedency and modified Load function using Json.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'org.apache.httpcomponents:httpasyncclient:4.0.2'
     // compile 'org.json:json:20140107'
     //compile 'com.mashape.unirest:unirest-android:1.0+'
+    compile 'com.google.code.gson:gson:2.8.1'
 }
