--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     compile 'com.mashape.unirest:unirest-java:1.4.9'
     compile 'org.apache.httpcomponents:httpasyncclient:4.0.2'
     // compile 'org.json:json:20140107'
-    //compile 'com.mashape.unirest:unirest-android:1.0+'
+    compile 'com.mashape.unirest:unirest-android:1.0+'
 }
