Added customized list view.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
     // compile 'org.json:json:20140107'
     //compile 'com.mashape.unirest:unirest-android:1.0+'
     compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
 }
